--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 pycodestyle==2.9.1
+python-dotenv==0.20.0
 SQLAlchemy==1.4.39
 toml==0.10.2
 Werkzeug==2.2.1
