--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 autopep8==1.6.0
+bcrypt==3.2.2
+cffi==1.15.1
 click==8.1.3
 Flask==2.2.0
+Flask-Bcrypt==1.0.1
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
 greenlet==1.1.2
@@ -9,6 +12,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 pycodestyle==2.9.1
+pycparser==2.21
 python-dotenv==0.20.0
 SQLAlchemy==1.4.39
 toml==0.10.2
